# a2a_mcp

./: README.md  a2a_server.py  gradio_interface.py  launcher.py  mcp_main.py  pyproject.toml
agent_server/: lektor.py  optimizer.py  query_ref.py  sentiment.py  user_interface.py
mcp_services/mcp_anonymizer/: anonymiz.py
mcp_services/mcp_fileconverter/: file2pdf.py
mcp_services/mcp_time/: ntp_time.py
mcp_services/mcp_website/: headless_browser.py
